<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AccessibilityFragment"
    android:background="@color/primaryColor">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessibility"
            android:textColor="@color/primaryTextColor"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.183" />
        <ImageView
            android:id="@+id/hamburgerMenu"
            android:layout_width="52dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/hamburger_menu"
            android:contentDescription="@string/hamburger_menu_icon"/>

        <TextView
            android:id="@+id/text_above"
            android:layout_width="65dp"
            android:layout_height="26dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="-43dp"
            android:layout_toLeftOf="@id/hamburgerMenu"
            android:gravity="end"
            android:text="@string/more"
            android:textColor="@color/primaryTextColor" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout2"
        app:layout_constraintVertical_bias="0.3">

        <!-- Font Size Adjustment -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/font_size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
               />

            <Button
                android:id="@+id/decrease_font_size_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:contentDescription="@string/font_size_decrease"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                />

            <TextView
                android:id="@+id/font_size_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/font_size_default"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/increase_font_size_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:contentDescription="@string/font_size_increase"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Zoom Level Adjustment -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zoom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_zoom"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/decrease_zoom_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:contentDescription="@string/font_zoom_decrease"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/zoom_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/font_zoom_default"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/increase_zoom_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:contentDescription="@string/font_zoom_increase"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Button Size Adjustment -->
        <TextView
            android:id="@+id/button_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_size"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/small_button_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small"
                android:contentDescription="@string/small_text_radio_button"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"/>

            <RadioButton
                android:id="@+id/medium_button_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/medium"
                android:contentDescription="@string/medium_text_radio_button"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"/>

            <RadioButton
                android:id="@+id/large_button_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large"
                android:contentDescription="@string/large_text_radio_button"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"/>
        </RadioGroup>

        <!-- Dark Mode Toggle -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dark_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:contentDescription="@string/dark_mode"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            />

        <!-- Other settings can be added here with similar structures -->

    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/home"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:background="@drawable/home_button"-->
<!--        app:layout_constraintWidth_percent="0.25"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/Drive_Bottom"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:text="Home"-->
<!--        android:textColor="@color/white"-->
<!--        android:gravity="center"-->
<!--        android:textSize="18sp"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        app:drawableBottomCompat="@drawable/baseline_home_24" />-->

<!--    <TextView-->
<!--        android:id="@+id/Drive_Bottom"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:background="@drawable/drive_bottom"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:gravity="center"-->
<!--        android:text="Drive"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="18sp"-->
<!--        app:drawableBottomCompat="@drawable/baseline_bike_scooter_24"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/analytics_button"-->
<!--        app:layout_constraintStart_toEndOf="@id/home"-->
<!--        app:layout_constraintWidth_percent="0.25" />-->


<!--    <TextView-->
<!--        android:id="@+id/analytics_button"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:background="@drawable/analytics_bottom"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/analytics"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="18sp"-->
<!--        app:drawableBottomCompat="@drawable/baseline_analytics_24"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/button4"-->
<!--        app:layout_constraintStart_toEndOf="@id/Drive_Bottom"-->
<!--        app:layout_constraintWidth_percent="0.25" />-->

<!--    <TextView-->
<!--        android:id="@+id/button4"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:background="@drawable/messages_bottom"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/messages"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="18sp"-->
<!--        app:drawableBottomCompat="@drawable/baseline_email_24"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/analytics_button"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintWidth_percent="0.25" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView4"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/accessibility"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="28sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/relativeLayout2"-->
<!--        app:layout_constraintVertical_bias="0.183" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView6"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="4dp"-->
<!--        android:src="@drawable/accessibility_setting_bottom"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        tools:layout_editor_absoluteY="454dp" />-->


</androidx.constraintlayout.widget.ConstraintLayout>